# Estudios

./: Notes  README.md
C-C++/: Bifurcacion.cpp  forcongotoxy.cpp  job.c  sistriBWC.c  while.c
Frontend/Html/: Ejemplo_a_seguir.html  frame cedeño.html
Frontend/Html/Eloyalfaro/src/Css/: style.css
Frontend/Html/Eloyalfaro/src/Html/: Autoridades.html
Frontend/Javascript/eloy/: Formulario.html  antonio.html  body.css
Frontend/React/eloy/: Autoridades.html  Frame.html  antonio.html
Frontend/eloy/: Menu.html
Important/Backend/Golang/Syntax/: mouredev.go
Important/Ruby/: pablo.py
Important/Ruby/Curso-Online/: #3Variables.rb
Important/Rust/: Cargo.toml
Important/Rust/src/prom_escolares/: Programa#3.rs
Important/Rust/src/rust_oficcial_books/: #2_Variables.rs
Important/Rust/src/rust_oficial_book/: #2_Variables.rs  #3_Data_Types.rs  #4_Funciones.rs  #5_control_flow.rs
Important/Rust/src/syntax/: MoureDev.rs
Md/Important/: Php.md  RUby.md  Rust.md  Sql-Mysql.md
Md/Secundary/: C#.md  Css.md  Html.md  JavaScript.md  Lua.md  Php.md  Python.md  React.md  Tailwindscss.md  lit-html.md  typescript.md
ObsidianMD/: Untitled.canvas
ObsidianMD/.obsidian/: workspace.json
Paginas webs/: hola.html
Rust/src/fast_syntax/: XtoY.rs
Rust/src/prom_escolares/: Programa#1.rs
Rust/src/rust_oficial_book/: #1_Guessing_Game.rs
Secundary/: Autoridades.html  Notes  tilin.docx
Secundary/C-C++/: Sistri.c  camarones2infbDaniloLopez.cpp
Secundary/Frontend/Html/: EloyAlfaro.html  frame cedeño.html
Secundary/Frontend/Html/Eloyalfaro/src/Html/: Docentes.html
Secundary/eloy/: Autoridades.html  Menu.html  style.css
console/: Cargo.toml
console/src/: Guessing_Game.rs  Programa#1.rs  Programa#2.rs  Programa#3.rs  main.rs
console/src/rust_oficial_book/: Variables.rs
eloy/: Docentes.html  style.css
