[package]
name = "console"
version = "0.1.0"
edition = "2021"

[[bin]]
path="src/main.rs" 
name="estudios"

[[bin]]
path="src/Programa#1.rs"
name="programa1"

[[bin]]
path="src/GuessingGame.rs"
name="simplegame"

[[bin]]
path="src/Programa#2.rs"
name="calculator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
