[package]
name = "console"
version = "0.1.0"
edition = "2021"

[[bin]]
path="src/Syntax.rs" 
name="syntax"

[[bin]]
path="src/Programa#1.rs"
name="total_a_pagar_en_el_cine"

[[bin]]
path="src/Guessing_Game.rs"
name="game"

[[bin]]
path="src/Programa#2.rs"
name="calculator"

[[bin]]
path="src/Variables.rs"
name="variables"

[[bin]]
path="src/Programa#3.rs"
name="promedios"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"