[package]
name = "console"
version = "0.1.0"
edition = "2021"

#Syntax
[[bin]]
path="src/fast_syntax/XtoY.rs" 
name="xtoy"

[[bin]]
path="src/fast_syntax/MoureDev.rs"
name="moure"
#-------------------------------------------------------------------------------
#prom_escolares
[[bin]]
path="src/prom_escolares/Programa#1.rs"
name="total_a_pagar_en_el_cine"

[[bin]]
path="src/prom_escolares/Programa#2.rs"
name="calculator"

[[bin]]
path="src/prom_escolares/Programa#3.rs"
name="promedios"
#-------------------------------------------------------------------------------
#rust_oficial_book
[[bin]]
path="src/rust_oficial_book/Guessing_Game.rs"
name="game"

[[bin]]
path="src/rust_oficial_book/Variables.rs"
name="variables"
#-------------------------------------------------------------------------------


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.7.2", package = "gtk4", features = ["v4_8"] }
rand = "0.8.5"
